--- a/404.md
+++ b/404.md
@@ -1,3 +1,7 @@
+---
+layout: default
+---
+
 <div class="w-100">
     <h1>404 Not Found</h1>
 	<p>Oops! The content you're looking for isn't available. The link may be broken, or the page may have been moved or deleted.  
